Fixes alignment issue in comp four in mobile view

--- a/src/client/App.css
+++ b/src/client/App.css
@@ -244,6 +244,21 @@
   }
 }
 
+.compFour-text {
+  width: 77%;
+  color: #f2ebe0;
+  height: 100%;
+  text-align: left;
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  @media (max-width:1050px){
+    width: 100vw;
+    /* padding-left: 0px; */
+  }
+}
+
 .fourTitle {
   color: #f2ebe0;
   height: 100%;
@@ -318,15 +333,8 @@
   @media (max-width: 730px){
     margin-left: 50px;
     margin-right: 50px;
-    scale: 80%;
+    /* scale: 80%; */
   }
-}
-
-h3 {
-  text-align: center;
-  font-weight: 100;
-  /* width: 90%; */
-  line-height: 1.5;
 }
 
 .textDiv {
@@ -369,6 +377,14 @@ h3 {
   }
 }
 
+h1 {
+  font-size: 73px;
+  font-weight: 200;
+  @media (max-width: 875px){
+    margin-top: 25px;
+  }
+}
+
 h2 {
   margin-bottom: 20px;
   margin-top: -45px;
@@ -379,28 +395,11 @@ h2 {
   }
 }
 
-h1 {
-  font-size: 73px;
-  font-weight: 200;
-  @media (max-width: 875px){
-    margin-top: 25px;
-  }
-  
-}
-
-.compFour-text {
-  width: 77%;
-  color: #f2ebe0;
-  height: 100%;
-  text-align: left;
-  padding-left: 15px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  @media (max-width:1050px){
-    width: 100vw;
-    padding-left: 0px;
-  }
+h3 {
+  text-align: center;
+  font-weight: 100;
+  /* width: 90%; */
+  line-height: 1.5;
 }
 
 .page {
